# personal-wgpu-demos

./: .gitignore  Cargo.toml  README.md  build.rs
src/: application.rs  camera.rs  controller.rs  main.rs  model.rs  render_item.rs  shader.frag  shader.vert  texture.rs  timer.rs
src/model/: mesh.rs  vertex.rs
src/resources/shaders/: shader.frag  shader.vert
