[package]
name = "pbr-wgpu-demo"
version = "0.1.0"
authors = ["mjm114514 <956697547@qq.com>"]
edition = "2018"

[dependencies]
image = "0.23"
winit = "0.24"
cgmath = "0.18"
env_logger = "0.7"
log = "0.4"
futures = "0.3"
bytemuck = { version = "1.4", features = [ "derive" ]}
anyhow = "1.0"

[dependencies.wgpu]
version = "0.7"
features = ["vulkan-portability"]

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.0"
glob = "0.3"
shaderc = "0.7"